# simple-web-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js
.github/workflows/: ci-cd-demo.yml
docs/: plan.md  tools.md
public/css/: style.css
simple_web_app/: app.py
simple_web_app/templates/: index.html
simple_web_app/utils/: helpers.py
src/: about.html  index.html  server.js
static/css/: style.css
tests/: test_app.py
